# madlab

./: .gitignore  Cargo.toml  desktop.ini  icon.rc  index.html  madlab.code-workspace
docs/: .todo  changelog.md  roadmap.md
old/: agent.rs  element.rs  jet.rs  neuro.rs  particle.rs  progress_bar.rs  source.rs
src/: camera.rs  collector.rs  consts.rs  dbg.rs  element.rs  globals.rs  kinetic.rs  main.rs  object.rs  physics.rs  physics_types.rs  sim.rs  timer.rs  ui.rs  util.rs  world.rs
