[package]
name = "madlab"
version = "0.4.0"
edition = "2021"
authors = ["Artur Gwoździowski <gwozdyk@gmain.com>"]
keywords = ["physics", "sandbox", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }
egui-macroquad = "0.15"
crossbeam = "0.8.2"

[build-dependencies]
embed-resource = "2.3.0"

[profile.release]
opt-level = 3
build-override.opt-level = 3